--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -30,7 +30,7 @@
   "sentEmail": "Sent an e-mail!",
   "validationError": "Please enter the correct value...",
   "supportMessage": "All works here are created individually.\nYour support will encourage my next creation.",
-  "helloAnno": "Hello, I'm AnnoRyoya.",
+  "helloAnno": "Hello, I'm Ryoya Anno.",
   "webDeveloper": "I'm a Web Developer!",
   "performancePdf": "View this page's performance"
 }
