--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -32,5 +32,111 @@
   "supportMessage": "All works here are created individually.\nYour support will encourage my next creation.",
   "helloAnno": "Hello, I'm Ryoya Anno.",
   "webDeveloper": "I'm a Web Developer!",
-  "performancePdf": "View this page's performance"
+  "performancePdf": "View this page's performance",
+  "work.overview": "Overview",
+  "work.responsibility": "Responsibilities",
+  "work.skills": "Skills Acquired",
+  "work.comment": "Comments",
+  "work.close": "Close",
+  "work.general.title": "Web Service for General Households",
+  "work.general.description": "A service to manage the power generation and usage of solar panels for detached houses. Responsible for frontend (React), backend (Express), and cloud (Azure) construction, development, and maintenance.",
+  "work.general.overview": "Developed a system to manage the power generation and usage of solar panels installed in detached houses. Developed in an agile team of less than 10 people.",
+  "work.general.responsibility.1": "Built frontend (React), backend (Express), and cloud environment (Azure)",
+  "work.general.responsibility.2": "Responsible for development and maintenance",
+  "work.general.responsibility.3": "Coordination and hearings with customers",
+  "work.general.responsibility.4": "Training young members, code review, technical consultation",
+  "work.general.responsibility.5": "Progress management in small task units",
+  "work.general.skills.1": "Full-stack development skills using React / Express",
+  "work.general.skills.2": "Cloud environment construction skills using Azure App Service, Azure Functions, etc.",
+  "work.general.skills.3": "Team development experience in agile development (Scrum)",
+  "work.general.skills.4": "API design and asynchronous communication implementation know-how",
+  "work.general.skills.5": "Design of data linkage between frontend and backend with performance in mind",
+  "work.general.skills.6": "Customer hearing and requirements organization skills",
+  "work.general.comment.1": "Designed with consideration for asynchronous communication and data update load to visualize solar power generation in real time.",
+  "work.general.comment.2": "Since it was a full-stack configuration combining React, Express, and Azure, development was carried out with an awareness of consistency between each layer.",
+  "work.general.comment.3": "Since the project was conducted in agile development (Scrum), I was able to quickly improve by repeating requirements adjustment → implementation → testing → review in short sprints.",
+  "work.general.comment.4": "I was also in charge of coordination and hearings with customers, and acquired the ability to explain technical backgrounds in an easy-to-understand manner even for non-engineers.",
+  "work.general.comment.5": "Actively provided technical support and code reviews to young members, contributing to improving the productivity and quality of the entire team.",
+  "work.doctor.title": "Patient Diagnosis Support Service for Doctors",
+  "work.doctor.description": "A service for diabetic patients and pregnant women who need to regularly and accurately monitor their biometric information, to upload biometric data to the cloud using wearable devices and share it with doctors. Responsible for web page maintenance with .netCore and cloud (Azure).",
+  "work.doctor.overview": "Developed a system for diabetic patients and pregnant women who need to regularly and accurately monitor their biometric information, to upload biometric data to the cloud using wearable devices and share it with doctors.",
+  "work.doctor.responsibility.1": "Agile development with less than 10 people",
+  "work.doctor.responsibility.2": "Responsible for designing the connection method with device partners",
+  "work.doctor.responsibility.3": "Responsible for documenting the existing configuration",
+  "work.doctor.responsibility.4": "Responsible for web page maintenance with .NetCore and cloud (Azure)",
+  "work.doctor.skills.1": "Understanding of data linkage requirements in medical systems (security, consistency, fault tolerance)",
+  "work.doctor.skills.2": "Communication protocol and API specification adjustment skills with devices",
+  "work.doctor.skills.3": "Understanding and adjustment skills of Azure (Functions, App Service, storage, etc.) configuration",
+  "work.doctor.skills.4": "Maintenance and modification skills using .NetCore",
+  "work.doctor.skills.5": "Issue management and stakeholder coordination ability in an agile environment",
+  "work.doctor.comment.1": "Since the participation period for this project was short, the main tasks were especially configuration adjustments around the cloud and specification coordination with device providers. In order to proceed smoothly even in a short period, I carefully examined existing documents and logs, and was conscious of the speed of situation grasp.",
+  "work.doctor.comment.2": "Due to the nature of medical data linkage, emphasis was placed on accuracy and security, and careful design was carried out to prevent inconsistencies and omissions in the examination of data linkage methods.",
+  "work.doctor.comment.3": "In documenting the existing configuration, I organized the parts that had become personalized, and by summarizing them into configuration diagrams and flows that new members could easily understand, I contributed to improving the overall development efficiency of the project.",
+  "work.c02.title": "CO2-Free Power Visualization & DR Support Service for Corporations",
+  "work.c02.description": "A service to visualize what percentage of the power used at corporate sites is CO2-free. Also developed a service to support demand response (DR) operations that request to refrain from using electricity during power shortages. Developed in an agile team of less than 20 people.",
+  "work.c02.overview": "A service to visualize what percentage of the power used at corporate sites is CO2-free. Also developed a service to support demand response (DR) operations that request to refrain from using electricity during power shortages. Developed in an agile team of less than 20 people.",
+  "work.c02.responsibility.1": "Development and maintenance of frontend (React), backend (Express), and cloud environment (Azure)",
+  "work.c02.responsibility.2": "Responsible for documenting the existing configuration",
+  "work.c02.responsibility.3": "Coordination and hearings with customers",
+  "work.c02.responsibility.4": "Promotion of agile (Scrum) development (holding Scrum events)",
+  "work.c02.responsibility.5": "Led the construction and optimization of CI/CD environments (Azure DevOps / GitHub Actions)",
+  "work.c02.responsibility.6": "Organized and documented infrastructure configuration and overall system structure, and explained to the team",
+  "work.c02.skills.1": "Web application design and implementation skills using React / Express",
+  "work.c02.skills.2": "Understanding and operation skills of cloud configuration centered on Azure (App Service, Functions, Storage, etc.)",
+  "work.c02.skills.3": "Construction and efficiency improvement of CI/CD pipelines (GitHub Actions / Azure DevOps)",
+  "work.c02.skills.4": "Agile development promotion including Scrum Master role",
+  "work.c02.skills.5": "Overall design perspective considering non-functional requirements (performance, operation, availability)",
+  "work.c02.skills.6": "Communication skills for customer hearings and specification adjustments",
+  "work.c02.comment.1": "Since the service handles large and highly variable power data, the backend and cloud configuration were designed and tuned with performance in mind.",
+  "work.c02.comment.2": "In organizing the CI/CD environment, I reviewed the build time and deployment procedures, which were bottlenecks for the development team, and contributed to improving development speed by realizing automation and speeding up.",
+  "work.c02.comment.3": "In customer hearings, I accurately understood the requirements of the power industry, which has many technical terms, and organized feasibility from a technical perspective to make proposals, supporting the early establishment of development policies.",
+  "work.c02.comment.4": "In promoting Scrum events, I encouraged communication improvement and habit formation of issue sharing within the team, contributing to the maturity of agile development.",
+  "work.blockchain.title": "Consortium Blockchain Service PoC",
+  "work.blockchain.description": "Built a consortium-type service using HyperLedger Fabric. Built a secure site entry management system.",
+  "work.freeaddress.title": "Free Address Seat Management Service (In-house Service)",
+  "work.freeaddress.description": "A free address seat management service using face authentication for login. Responsible for everything from planning, technology selection, development, to operation.",
+  "work.azure.title": "Azure PaaS Support Engineer",
+  "work.azure.description": "Worked as a support engineer for Azure App Service, handling technical inquiries, troubleshooting, and knowledge sharing.",
+  "work.azure.responsibility.1": "As a support engineer for App Service, provided support for customer questions such as 'this error occurred' or 'is it possible to realize this operation?'",
+  "work.azure.responsibility.2": "For detailed questions about App Service specifications or issues with suspected bugs, discussed with overseas engineers and provided information to customers who inquired",
+  "work.azure.responsibility.3": "Knowledge sharing inside and outside the company (tech blogs, study sessions)",
+  "work.azure.skills.1": "Detailed understanding of PaaS products centered on Azure App Service",
+  "work.azure.skills.2": "Troubleshooting ability using log analysis and Kudu/diagnostic tools",
+  "work.azure.skills.3": "Technical discussion and escalation with product teams (English-speaking countries)",
+  "work.azure.skills.4": "Explanation skills tailored to the customer's technical level (abstraction, step-by-step explanation)",
+  "work.azure.skills.5": "Organizing and documenting recurrence prevention measures and best practices",
+  "work.azure.skills.6": "Accurate and prompt situation assessment and issue isolation skills",
+  "work.azure.comment.1": "By carefully hearing the background and operational status of inquiries, I not only provided answers but also identified the root cause and suggested recurrence prevention measures, contributing to improved customer satisfaction.",
+  "work.azure.comment.2": "In coordination with overseas engineers, I not only discussed technical matters in English but also played a role in explaining things in an easy-to-understand manner to customers, helping to bridge communication gaps.",
+  "work.azure.comment.3": "By deeply understanding the specifications and limitations of App Service, I was increasingly entrusted with technically difficult inquiries, and actively worked on knowledge sharing within the team.",
+  "work.knowledge.title": "Knowledge Platform",
+  "work.knowledge.description": "A platform where companies and individuals with issues can use various services centered on 'VisasQ interview,' a spot consulting service that allows business consultations with experts by the hour.",
+  "work.knowledge.overview": "A platform where companies and individuals with issues can use various services centered on 'VisasQ interview,' a spot consulting service that allows business consultations with experts by the hour.",
+  "work.knowledge.responsibility.1": "Frontend (Nuxt) and backend (Python) development and maintenance",
+  "work.knowledge.responsibility.2": "Improvement of CICD environment for better development experience",
+  "work.knowledge.responsibility.3": "Coordination and hearings with users",
+  "work.knowledge.responsibility.4": "Optimization of AI coding tools",
+  "work.knowledge.responsibility.5": "Project lead for small projects (about half a year)",
+  "work.knowledge.responsibility.6": "Integration of AI into the system",
+  "work.knowledge.skills.1": "Frontend development skills using Nuxt / TypeScript",
+  "work.knowledge.skills.2": "API design and implementation skills using Python (FastAPI / Flask, etc.)",
+  "work.knowledge.skills.3": "Development efficiency improvement by building and improving CI/CD pipelines (GitHub Actions / CircleCI)",
+  "work.knowledge.skills.4": "Process design for integrating AI coding tools into business flows",
+  "work.knowledge.skills.5": "Skills for improving functions and organizing requirements through user hearings",
+  "work.knowledge.skills.6": "Project lead for small teams (progress management, specification adjustment, review)",
+  "work.knowledge.skills.7": "PoC design of AI functions, API integration, technical verification for service introduction",
+  "work.knowledge.comment.1": "By organizing issues in the existing system and leading automation of CI/CD and improvement of the review system, contributed to improving development speed and quality.",
+  "work.knowledge.comment.2": "In utilizing AI coding tools, adjusted settings and organized best practices according to the development flow, contributing to improving the productivity of the entire team.",
+  "work.knowledge.comment.3": "In user hearings, grasped the essence of business background and issues, and made optimal proposals from a technical perspective, creating outputs that directly led to product improvement.",
+  "work.knowledge.comment.4": "In integrating AI functions, was consistently in charge from PoC stage to verification and implementation, contributing to building the foundation for functions that provide new value. Also handled coordination with infrastructure and cross-development teams, contributing to building the foundation for integrating AI into the system as a development organization.",
+  "work.creative.title": "CreateiveCoding",
+  "work.creative.description": "Creating visually appealing interactions in a sandbox environment using Spline, which can render 3D models on web pages, and Lottie, which enables simple animations.",
+  "work.photo.title": "Photo Portfolio",
+  "work.photo.description": "Publishing a portfolio of photos taken as a hobby. Tried out animations and aimed for a visually appealing site.",
+  "work.qiita.title": "Qiita",
+  "work.qiita.description": "Outputting know-how acquired on Qiita. Please follow me!",
+  "work.blog.title": "Personal Blog",
+  "work.blog.description": "Publishing a blog summarizing know-how. Mainly writing technical content.",
+  "work.corpblog.title": "Corporate Tech Blog",
+  "work.corpblog.description": "Blog articles published while employed. Mainly writing technical content."
 }
