--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -12,7 +12,7 @@
   "recommendationComment": "Recommendation Comment",
   "aboutMeProfile": "Webエンジニアとしてキャリアをスタートし、これまで 複数のBtoB/BtoC Webアプリ開発で、設計〜実装〜運用まで一貫して担当してきました。React / Nuxt / TypeScript を用いたフロントエンド開発、Express / Python API 開発、Azureを中心としたクラウド構築など、幅広い領域を横断できるフルスタックエンジニアです。開発だけでなく、技術選定やアーキテクチャ検討、CI/CD基盤の改善、プロジェクトの生産性や品質向上にも継続的に携わってきました。また、スクラムイベントの推進、コードレビューなど、小規模チームでのリードポジションを担う経験もあります。日本マイクロソフトでは Azure App ServiceのPaaSサポートエンジニアとして多くの技術課題を解決し、非エンジニアを含む幅広いユーザーへのコミュニケーションスキルを習得しました。この経験は、現在の仕様調整・要件整理・顧客コミュニケーションにも活きています。現在は AI を活用したワークフロー改善や、プロダクトへの AI 機能導入をリードしており、「チームの生産性最大化」と「事業価値に直結する機能開発」を重視した取り組みを行っています。",
   "aboutMeRecommendation": "安野さんは前職、現職で Web Application 開発スキル、Cloud Solution の開発、運用、サポート経験と、ソフトスキル (傾聴力、顧客のニーズや期待の把握、ならびに、顧客目線の解りやすい説明) を持っています。チームプレイヤーとして、チームメンバーと積極的に関わり、迅速に技術、ビジネススキル、ソフトスキルを習得し、チームに貢献していただけます。また、ミッションクリティカルなシステムの緊急対応という緊迫した状態においても、チームメンバーと協力し、顧客の期待値に添ったスピード感での対応をしていただけます。顧客目線の解りやすい資料 (Blog、顧客への説明資料など) の作成と、Verbal なコミュニケーションスキルを持った、ソフトスキルと技術スキル、知識を兼ね備えたエンジニアとして、あらゆる職種での貢献が期待できます。他者に対する気遣い、気配りから、チームプレイヤーとして力を発揮していただき、また、自己研鑽を怠らない Growth mindset、仕事に対する強い責任感を持っていて、安心して仕事を任せることができるメンバーです。",
-   "language": "Language",
+  "language": "Language",
   "framework": "Framework",
   "cloud": "Cloud",
   "developing": "Developing/Operations",
@@ -32,5 +32,111 @@
   "supportMessage": "ここにある制作物は、\nすべて個人で作っています。\n応援いただけると、次の制作の励みになります。",
   "helloAnno": "Hello, I'm Ryoya Anno.",
   "webDeveloper": "I'm a Web Developer!",
-  "performancePdf": "このページのパフォーマンスを見る"
+  "performancePdf": "このページのパフォーマンスを見る",
+  "work.overview": "概要",
+  "work.responsibility": "担当業務",
+  "work.skills": "習得スキル",
+  "work.comment": "コメント",
+  "work.close": "閉じる",
+  "work.general.title": "一般家庭向け電力系Webサービス",
+  "work.general.description": "太陽光発電に用いるソーラパネルの発電量や使用量を管理するサービス。フロントエンド(React)、バックエンド(Express)、クラウド環境(Azure)の構築・開発・保守を担当した。",
+  "work.general.overview": "戸建て住宅に設置する太陽光発電に用いるソーラパネルの発電量や使用量を管理するシステムを開発。10人未満のアジャイル体制にて開発を実施。",
+  "work.general.responsibility.1": "フロントエンド(React)、バックエンド(Express)、クラウド環境(Azure)の構築",
+  "work.general.responsibility.2": "開発・保守を担当",
+  "work.general.responsibility.3": "顧客との調整、ヒアリング",
+  "work.general.responsibility.4": "若手メンバーの育成・コードレビュー・技術相談対応",
+  "work.general.responsibility.5": "小さなタスク単位での進行管理",
+  "work.general.skills.1": "React / Express を用いたフルスタック開発スキル",
+  "work.general.skills.2": "Azure App Service、Azure Functions等を活用したクラウド環境構築スキル",
+  "work.general.skills.3": "アジャイル開発（スクラム）でのチーム開発経験",
+  "work.general.skills.4": "API 設計、非同期通信まわりの実装ノウハウ",
+  "work.general.skills.5": "パフォーマンスを意識したフロント・バック間のデータ連携設計",
+  "work.general.skills.6": "顧客ヒアリング・要件整理スキル",
+  "work.general.comment.1": "太陽光発電量をリアルタイムに可視化するため、非同期通信やデータ更新の負荷を考慮して設計を行いました。",
+  "work.general.comment.2": "React・Express・Azureを組み合わせるフルスタック構成であったため、各レイヤー間の整合性を意識した開発を心がけました。",
+  "work.general.comment.3": "アジャイル開発（スクラム）で進行しており、短いスプリントの中で要件調整→実装→テスト→レビューを繰り返すことで、迅速に改善を回す経験ができました。",
+  "work.general.comment.4": "顧客との調整やヒアリングも担当し、非エンジニア向けにもわかりやすく技術的背景を説明する力が身につきました。",
+  "work.general.comment.5": "若手メンバーへの技術支援やコードレビューを積極的に行い、チーム全体の生産性と品質向上に貢献しました。",
+  "work.doctor.title": "医師向け患者診断サポートサービス",
+  "work.doctor.description": "生体情報を定期的に、正確に把握する必要がある糖尿病患者や妊婦さんが、ウェアラブル端末を用いて生体情報をクラウドにアップロードし医師に連携するサービス。.netCore、クラウド環境(Azure)でのWebページ保守を担当した。",
+  "work.doctor.overview": "生体情報を定期的に、正確に把握する必要がある糖尿病患者や妊婦さんが、ウェアラブル端末を用いて生体情報をクラウドにアップロードし医師に連携するシステムの開発を実施。",
+  "work.doctor.responsibility.1": "10人未満のアジャイル開発",
+  "work.doctor.responsibility.2": "デバイス連携先との連携方式設計を担当",
+  "work.doctor.responsibility.3": "既存構成のドキュメント化を担当",
+  "work.doctor.responsibility.4": ".NetCore、クラウド環境(Azure)でのWebページ保守を担当",
+  "work.doctor.skills.1": "医療系システムにおけるデータ連携要件の理解（セキュリティ、整合性、耐障害性）",
+  "work.doctor.skills.2": "デバイス側との通信プロトコル、API仕様調整スキル",
+  "work.doctor.skills.3": "Azure（Functions、App Service、ストレージ等）の構成把握および調整スキル",
+  "work.doctor.skills.4": ".NetCore を用いた保守・改修対応スキル",
+  "work.doctor.skills.5": "アジャイル環境下での課題管理・ステークホルダー調整能力",
+  "work.doctor.comment.1": "本案件は参画期間が短かったため、特にクラウド周りの構成調整やデバイス提供会社との仕様すり合わせが中心業務となりました。短期間でもスムーズに作業を進められるよう、既存ドキュメントやログを精査し、状況把握のスピードを意識しました。",
+  "work.doctor.comment.2": "医療データ連携という特性上、精度やセキュリティを重視し、データ連携方式の検討では不整合や漏れが出ないよう慎重に設計を行いました。",
+  "work.doctor.comment.3": "既存構成のドキュメント化では、属人化していた部分を整理し、今後参加するメンバーが理解しやすい構成図・フローにまとめることでプロジェクト全体の開発効率化に貢献しました。",
+  "work.c02.title": "法人向けCO2フリー電力可視化・DRサポートサービス",
+  "work.c02.description": "法人向けに拠点で使った電力の内どれほどの割合がCO2フリー電力であるかを可視化するサービス。また、電力逼迫時に電力使用を控えるよう要請するデマンドレスポンス(DR)業務のサポートもサービスの開発。20人未満のアジャイル体制にて開発を実施。",
+  "work.c02.overview": "法人向けに拠点で使った電力の内どれほどの割合がCO2フリー電力であるかを可視化するサービス。また、電力逼迫時に電力使用を控えるよう要請するデマンドレスポンス(DR)業務のサポートもサービスの開発。20人未満のアジャイル体制にて開発を実施。",
+  "work.c02.responsibility.1": "フロントエンド(React)、バックエンド(Express)、クラウド環境(Azure)の開発・保守",
+  "work.c02.responsibility.2": "既存構成のドキュメント化を担当",
+  "work.c02.responsibility.3": "顧客との調整、ヒアリング",
+  "work.c02.responsibility.4": "アジャイル(スクラム)開発の推進(スクラムイベントの実施)",
+  "work.c02.responsibility.5": "CI/CD 環境（Azure DevOps / GitHub Actions）の構築・最適化を主導",
+  "work.c02.responsibility.6": "インフラ構成・システム全体構造の整理とドキュメント化、およびチームへの説明",
+  "work.c02.skills.1": "React / Express を用いた Web アプリケーション設計・実装スキル",
+  "work.c02.skills.2": "Azure（App Service、Functions、Storage 等）を中心としたクラウド構成の理解と運用スキル",
+  "work.c02.skills.3": "CI/CD パイプライン（GitHub Actions / Azure DevOps）の構築・効率化",
+  "work.c02.skills.4": "スクラムマスター的役割を含むアジャイル開発推進力",
+  "work.c02.skills.5": "非機能要件（性能・運用・可用性）を踏まえた全体設計の視点",
+  "work.c02.skills.6": "顧客ヒアリングの実施と仕様調整のコミュニケーションスキル",
+  "work.c02.comment.1": "電力データという大規模かつ変動の大きいデータを扱うため、バックエンドおよびクラウド構成ではパフォーマンスを意識した設計・チューニングを行いました。",
+  "work.c02.comment.2": "CI/CD 環境の整備では、開発チームのボトルネックだったビルド時間・デプロイ手順を見直し、自動化・高速化を実現することで、開発スピード向上に貢献しました。",
+  "work.c02.comment.3": "顧客ヒアリングでは、専門用語の多い電力業界の要件を正確に理解し、技術的な観点から実現性を整理して提案することで、開発方針の早期確立を支援しました。",
+  "work.c02.comment.4": "スクラムイベントの推進では、チーム内のコミュニケーション改善や課題共有の習慣化を促し、アジャイル開発の成熟度向上に寄与しました。",
+  "work.blockchain.title": "コンソーシアム型ブロックチェーンサービスPoC検証",
+  "work.blockchain.description": "HyperLedger Fabricを利用したコンソーシアム型サービスの構築を実施。セキュアな拠点入場管理システムを構築した。",
+  "work.freeaddress.title": "フリーアドレス座席管理サービス(社内サービス)",
+  "work.freeaddress.description": "ログインに顔認証を用いたフリーアドレス座席管理サービス。企画から、使用技術の選定・開発・運用まで担当。",
+  "work.azure.title": "Azure PaaS サポートエンジニア",
+  "work.azure.description": "Azure App Service の領域を担当し、技術的な問い合わせや不具合対応、ナレッジ発信を行ったサポートエンジニア業務。",
+  "work.azure.responsibility.1": "App Service の領域において、お客様より承る「このようなエラーが発生した」「こういった動作をしてほしいが実現可能か」といったご質問についてサポートエンジニアとしてサポートを提供",
+  "work.azure.responsibility.2": "App Service の仕様に関する詳細な質問や不具合の懸念がある事象に関しては、海外のエンジニアとディスカッションを行い、質問いただいたお客様へ情報をご案内",
+  "work.azure.responsibility.3": "社内外へのナレッジ発信（テックブログ、勉強会）",
+  "work.azure.skills.1": "Azure App Service を中心とした PaaS 製品の詳細な動作仕様の理解",
+  "work.azure.skills.2": "ログ解析や Kudu/診断ツールを用いたトラブルシューティング能力",
+  "work.azure.skills.3": "製品チーム（英語圏）との技術ディスカッション・エスカレーション対応",
+  "work.azure.skills.4": "顧客の技術レベルに合わせた説明スキル（技術抽象化・逐次説明の工夫）",
+  "work.azure.skills.5": "再発防止策やベストプラクティスの整理・ドキュメント化スキル",
+  "work.azure.skills.6": "正確かつ迅速な状況把握および課題切り分けスキル",
+  "work.azure.comment.1": "お問い合わせ内容の背景や運用状況を丁寧にヒアリングすることで、単に回答を提供するだけでなく「本質的な原因の特定」「再発防止策の提示」まで踏み込み、お客様満足度の向上に寄与しました。",
+  "work.azure.comment.2": "海外エンジニアとの調整では、英語での技術議論だけでなく、お客様側にも噛み砕いて説明する役割を担い、双方のコミュニケーションギャップ解消に貢献しました。",
+  "work.azure.comment.3": "App Service の仕様や制約を深く理解し、技術的に難易度の高い問い合わせの担当を任される機会が増え、チーム内のナレッジ共有にも積極的に取り組みました。",
+  "work.knowledge.title": "ナレッジプラットフォーム",
+  "work.knowledge.description": "課題を抱える企業や個人が、知見を持つエキスパートに1時間単位でビジネス相談ができるスポットコンサル「ビザスクinterview」を主軸とした各種サービスが利用できるプラットフォーム。",
+  "work.knowledge.overview": "課題を抱える企業や個人が、知見を持つエキスパートに1時間単位でビジネス相談ができるスポットコンサル「ビザスクinterview」を主軸とした各種サービスが利用できるプラットフォーム。",
+  "work.knowledge.responsibility.1": "フロントエンド(Nuxt)、バックエンド(Python)の開発・保守",
+  "work.knowledge.responsibility.2": "開発体験向上のためのCICD環境改善",
+  "work.knowledge.responsibility.3": "利用ユーザとの調整、ヒアリング",
+  "work.knowledge.responsibility.4": "AIコーディングツールの最適化",
+  "work.knowledge.responsibility.5": "小規模(半年ほど)のプロジェクトリード",
+  "work.knowledge.responsibility.6": "システムへのAI組み込み",
+  "work.knowledge.skills.1": "Nuxt / TypeScript を用いたフロントエンド開発スキル",
+  "work.knowledge.skills.2": "Python（FastAPI / Flask 等）による API 設計・実装スキル",
+  "work.knowledge.skills.3": "CI/CD パイプラインの構築改善による開発効率化（GitHub Actions / CircleCI）",
+  "work.knowledge.skills.4": "AI コーディングツールを業務フローへ統合するためのプロセス設計",
+  "work.knowledge.skills.5": "ユーザヒアリングを通じた機能改善・要件整理のスキル",
+  "work.knowledge.skills.6": "小規模チームのプロジェクトリード（進行管理・仕様調整・レビュー）",
+  "work.knowledge.skills.7": "AI 機能の PoC 設計、API 連携、サービス導入に伴う技術検証スキル",
+  "work.knowledge.comment.1": "既存システムの課題を整理し、CI/CD の自動化やレビュー体制の改善を主導することで、開発速度と品質の向上に貢献しました。",
+  "work.knowledge.comment.2": "AI コーディングツールの活用では、開発フローに合わせた設定調整・ベストプラクティスの整理を行い、チーム全体の生産性向上に寄与しました。",
+  "work.knowledge.comment.3": "ユーザヒアリングでは、業務背景や課題の本質を把握し、技術的観点から最適な提案を行うことで、プロダクト改善に直接つながるアウトプットを創出しました。",
+  "work.knowledge.comment.4": "AI 機能の組み込みにおいては、PoC 段階から検証・実装まで一貫して担当し、新しい価値提供を実現する機能の土台づくりに貢献しました。インフラチームや開発横断チームとの調整も担当し、開発組織としてAIをシステムに組み込む基盤の構築に貢献しました。",
+  "work.creative.title": "CreateiveCoding",
+  "work.creative.description": "3dモデルをWebページ上に描画できるSplineや、簡易なアニメーションを実現できるLottieを利用した見栄えのいいインタラクションをサンドボックス環境で作成している。",
+  "work.photo.title": "写真ポートフォリオ",
+  "work.photo.description": "趣味で撮影した写真のポートフォリオを公開しています。アニメーション部分を試行しており、見栄えの良いサイトを目指しました。",
+  "work.qiita.title": "Qiita",
+  "work.qiita.description": "Qiitaで習得したノウハウをアウトプットしています。Please follow me!",
+  "work.blog.title": "個人ブログ",
+  "work.blog.description": "ノウハウをまとめたブログを公開しています。技術的な内容を中心に執筆しています。",
+  "work.corpblog.title": "企業テックブログ",
+  "work.corpblog.description": "在職中に公開したブログ記事です。技術的な内容を中心に執筆しています。"
 }
